web frontend: compilation error view and check status indicator